Refactor configuration paths and update training script for improved clarity and functionality

--- a/configs/path.yml
+++ b/configs/path.yml
@@ -3,6 +3,7 @@ local:
   log_dir  : ./logs
   model_dir: ./models
   results_dir: ./results
+  config_dir: ./configs
 
 raven:
   data_dir : /ptmp/dtvu/data/tfbind
